kubernetes/controller/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-controller
spec:
  template:
    spec:
      containers:
        - name: project-controller
          image: ten1010io/project-controller:0.1.0-SNAPSHOT
          resources:
            requests: { }
            limits: { }
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: project-controller.project.aipub.ten1010.io
webhooks:
  - name: pods.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qVXdNVEE1TURNeU1EQTJXaGNOTXpVd01UQTNNRE15TURBMgpXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3JzYWYxSUdZeXI1NitZSTBBS0xjLzVvUWpLRjlUZGFvM0plZW8KMFJIaUtSbWY3Ynk5MmdOZTNaWkgvRU9FUWErNDJXNWw1Wm9Ia0pWQ0tZcWE2RFJwdmFrM3Uva3EvUXZZVXVGKwp3R0Vobm8wMWNR [...]
  - name: projects.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qVXdNVEE1TURNeU1EQTJXaGNOTXpVd01UQTNNRE15TURBMgpXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3JzYWYxSUdZeXI1NitZSTBBS0xjLzVvUWpLRjlUZGFvM0plZW8KMFJIaUtSbWY3Ynk5MmdOZTNaWkgvRU9FUWErNDJXNWw1Wm9Ia0pWQ0tZcWE2RFJwdmFrM3Uva3EvUXZZVXVGKwp3R0Vobm8wMWNR [...]
  - name: imagereviews.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qVXdNVEE1TURNeU1EQTJXaGNOTXpVd01UQTNNRE15TURBMgpXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3JzYWYxSUdZeXI1NitZSTBBS0xjLzVvUWpLRjlUZGFvM0plZW8KMFJIaUtSbWY3Ynk5MmdOZTNaWkgvRU9FUWErNDJXNWw1Wm9Ia0pWQ0tZcWE2RFJwdmFrM3Uva3EvUXZZVXVGKwp3R0Vobm8wMWNR [...]
---
